--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$Tn/jPQ6w5n8Cn50A4H6.HehVmOUNpiIFxq3tkbvxQMmFXqXDfiXFi"
+# 	- password: java.lang.String = "$2a$05$WNsloF9pX0b8koj7p5wIb.DfsnMgEuovJlsaBHbM7oGobaRskQK9O"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$d7CLAEyaOlnK4FG4AZ3Fm.4HcGGF.THzXaxbWxCzXe4WcRGuUe7uW"
+# 	- password: java.lang.String = "$2a$05$qGxLiyobZr3BBCRwooddb.IQNduUipl5ig/x4yB8YbAPx1dicS8mW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
