--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$SBKrxjnihAcZ2V0b0POsruYhYD5T0iqpwfRJ1CTRe9Nbpwb4kW6Ry"
+# 	- password: java.lang.String = "$2a$05$NgKZOurJxtlpGVEgcQpmL.suhDYimWvkCJW/v7Mt9b2H9bS1hdSN6"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$gAMJby.hBhut/xYxGb5oGOJXtdyGKmAzDCIwcsHne5Oz7r.xaqJ0C"
+# 	- password: java.lang.String = "$2a$05$1CO1sM1wp6487jQM6cpMCesElSOdbgnDQwwU4H1QbRt/i7vYQiB6C"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
