--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$pDRNWrMVdr8eSRhC3NV9pOmJ6oASyF40f84IbbFbczk4GnTujZK2q"
+# 	- password: java.lang.String = "$2a$05$YpypHIE7vT62sOf2./QVMOB1bh72dp5yFE25UQ6wTsAldnINUDbBq"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$08OaZqZYxQlIgAiSC7v1FOpZp5wohEGttSGNfj.ALr4ZiUhXofUp6"
+# 	- password: java.lang.String = "$2a$05$kjSpznoRtH41SXUGScCSPuDfqCGIg/N0NMS5tYcCe7f5gjgFG3iTi"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -79,4 +79,69 @@ administratorAuthenticated=5
 
 
 # ./src/main/population/sample-data.xml
+
+bulletin1=6
+
+# acme.entities.bulletins.Bulletin{id=6, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 6
+# 	- version: int = 0
+# 	from acme.entities.bulletins.Bulletin:
+# 	+ serialVersionUID: long = 1
+# 	- name: java.lang.String = "CorrederaBulletin"
+# 	- text: java.lang.String = "texto de ejemplo 1"
+
+bulletin2=7
+
+# acme.entities.bulletins.Bulletin{id=7, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 7
+# 	- version: int = 0
+# 	from acme.entities.bulletins.Bulletin:
+# 	+ serialVersionUID: long = 1
+# 	- name: java.lang.String = "San JoséBulletin"
+# 	- text: java.lang.String = "texto de ejemplo 2"
+
+bulletin3=8
+
+# acme.entities.bulletins.Bulletin{id=8, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 8
+# 	- version: int = 0
+# 	from acme.entities.bulletins.Bulletin:
+# 	+ serialVersionUID: long = 1
+# 	- name: java.lang.String = "CordónBulletin"
+# 	- text: java.lang.String = "texto de ejemplo 3"
+
+bulletin4=9
+
+# acme.entities.bulletins.Bulletin{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.bulletins.Bulletin:
+# 	+ serialVersionUID: long = 1
+# 	- name: java.lang.String = "RuízBulletin"
+# 	- text: java.lang.String = "texto de ejemplo 4"
+
+bulletin5=10
+
+# acme.entities.bulletins.Bulletin{id=10, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 10
+# 	- version: int = 0
+# 	from acme.entities.bulletins.Bulletin:
+# 	+ serialVersionUID: long = 1
+# 	- name: java.lang.String = "LópezBulletin"
+# 	- text: java.lang.String = "texto de ejemplo 5"
 
