--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$pDRNWrMVdr8eSRhC3NV9pOmJ6oASyF40f84IbbFbczk4GnTujZK2q"
+# 	- password: java.lang.String = "$2a$05$zUyhPyeDlxOSm/J7F4Bnh.LECashbt.UZcaOsHrxSUBu6zWjo634e"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$08OaZqZYxQlIgAiSC7v1FOpZp5wohEGttSGNfj.ALr4ZiUhXofUp6"
+# 	- password: java.lang.String = "$2a$05$MueM/5fxjxrgIa6hXSHM9ubGDWN8LdHUhfJlOFE.tVP.MxdRhN5rO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -79,4 +79,60 @@ administratorAuthenticated=5
 
 
 # ./src/main/population/sample-data.xml
+
+Shout01=6
+
+# acme.entities.shouts.Shout{id=6, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 6
+# 	- version: int = 0
+# 	from acme.entities.shouts.Shout:
+# 	+ serialVersionUID: long = 1
+# 	- author: java.lang.String = "Jane Doe"
+# 	- text: java.lang.String = "I'm the master of my room!"
+# 	- moment: java.util.Date = <<Fri Aug 09 15:55:00 CEST 2019>>
+
+Shout02=7
+
+# acme.entities.shouts.Shout{id=7, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 7
+# 	- version: int = 0
+# 	from acme.entities.shouts.Shout:
+# 	+ serialVersionUID: long = 1
+# 	- author: java.lang.String = "Foo Bar"
+# 	- text: java.lang.String = "Just turning 20!"
+# 	- moment: java.util.Date = <<Sat Sep 07 00:00:00 CEST 2019>>
+
+Shout03=8
+
+# acme.entities.shouts.Shout{id=8, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 8
+# 	- version: int = 0
+# 	from acme.entities.shouts.Shout:
+# 	+ serialVersionUID: long = 1
+# 	- author: java.lang.String = "John"
+# 	- text: java.lang.String = "I'm haopy!"
+# 	- moment: java.util.Date = <<Mon Sep 09 10:00:00 CEST 2019>>
+
+LopezBulletin01=9
+
+# acme.entities.lopezbulletins.LopezBulletin{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.lopezbulletins.LopezBulletin:
+# 	+ serialVersionUID: long = 1
+# 	- nombre: java.lang.String = "Vicente"
+# 	- dni: java.lang.String = "12345678A"
+# 	- descripcion: java.lang.String = "-Trabaja bien en equipo"
 
