--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$zUyhPyeDlxOSm/J7F4Bnh.LECashbt.UZcaOsHrxSUBu6zWjo634e"
+# 	- password: java.lang.String = "$2a$05$HqPVZfwUG7pSY5Eblh7Gg.Ie1WCZjJGZEYYIsP331Frbk7B6ZGeFa"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,8 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$Al.t4MQgvrBXpIW6crKXseqpM7jrFtebdDbDFIA.VMbxck8fv.byS"
-# 	- password: java.lang.String = "$2a$05$MueM/5fxjxrgIa6hXSHM9ubGDWN8LdHUhfJlOFE.tVP.MxdRhN5rO"
+# 	- password: java.lang.String = "$2a$05$.0/NPaSiI1Ox2es7UXendO.Jb5QKTRPjV84/qc55f3xbuZtduhk66"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -136,4 +135,18 @@ LopezBulletin01=9
 # 	- nombre: java.lang.String = "Vicente"
 # 	- dni: java.lang.String = "12345678A"
 # 	- descripcion: java.lang.String = "-Trabaja bien en equipo"
+
+CordonBulletin01=10
+
+# acme.entities.cordonbulletins.CordonBulletin{id=10, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 10
+# 	- version: int = 0
+# 	from acme.entities.cordonbulletins.CordonBulletin:
+# 	+ serialVersionUID: long = 1
+# 	- author: java.lang.String = "Alberto"
+# 	- company: java.lang.String = "Google"
+# 	- description: java.lang.String = "-Buena Empresa"
 
