--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$gYXos6r0cF2JXFuspagPGOtg78mZvN7wYV6ZEZLdPKtg3Gn7sEbrC"
+# 	- password: java.lang.String = "$2a$05$S8ELn.WYR28mBZX3ST2kgeUs7qfEVk/3DKbs3kWcUA9o0hgj.8zWW"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$FOZ5kix7Evmnuv6oPEA3H.ZUmBqDh1GwD.6Gxj0vYDoQp5d8kEU8i"
+# 	- password: java.lang.String = "$2a$05$4N0W9VlXuh6FgWh7T4w5/eUixjg/fcABw/5xFTIL1BPe5Lu5mHzCy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -76,49 +76,4 @@ administratorAuthenticated=5
 # 	- userAccount: acme.framework.entities.UserAccount = acme.framework.entities.UserAccount{id=3, version=0}
 # 	from acme.framework.entities.Authenticated:
 # 	- serialVersionUID: long = 1
-
-
-# ./src/main/population/sample-data.xml
-
-businessman01=6
-
-# acme.entities.sanjosebulletin.SanJoseBulletin{id=6, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 6
-# 	- version: int = 0
-# 	from acme.entities.sanjosebulletin.SanJoseBulletin:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Daniel"
-# 	- secondname: java.lang.String = "San José García"
-# 	- company: java.lang.String = "Nintendo"
-
-businessman02=7
-
-# acme.entities.sanjosebulletin.SanJoseBulletin{id=7, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 7
-# 	- version: int = 0
-# 	from acme.entities.sanjosebulletin.SanJoseBulletin:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Antonio"
-# 	- secondname: java.lang.String = "Corredera Lavadero"
-# 	- company: java.lang.String = "Nontiendo"
-
-businessman03=8
-
-# acme.entities.sanjosebulletin.SanJoseBulletin{id=8, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 8
-# 	- version: int = 0
-# 	from acme.entities.sanjosebulletin.SanJoseBulletin:
-# 	- serialVersionUID: long = 1
-# 	- name: java.lang.String = "Alberto"
-# 	- secondname: java.lang.String = "Cordon Noseque"
-# 	- company: java.lang.String = "Baches SL."
 
