--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$HqPVZfwUG7pSY5Eblh7Gg.Ie1WCZjJGZEYYIsP331Frbk7B6ZGeFa"
+# 	- password: java.lang.String = "$2a$05$YtQZoGyOoBGDcLd/RXD2W.77Xy8a74s1IwQgy6MYZwb7X6x/tmKPG"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$.0/NPaSiI1Ox2es7UXendO.Jb5QKTRPjV84/qc55f3xbuZtduhk66"
+# 	- password: java.lang.String = "$2a$05$iurBK7aLYLtFpEe2PAmH.ugYi/37CwqdFgpN0j3/idXEttTmevnua"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -76,6 +76,9 @@ administratorAuthenticated=5
 # 	- userAccount: acme.framework.entities.UserAccount = acme.framework.entities.UserAccount{id=3, version=0}
 # 	from acme.framework.entities.Authenticated:
 # 	- serialVersionUID: long = 1
+
+
+# ./src/main/population/sample-data.xml
 
 Shout01=6
 
@@ -146,4 +149,31 @@ CordonBulletin01=10
 # 	- author: java.lang.String = "Alberto"
 # 	- company: java.lang.String = "Google"
 # 	- description: java.lang.String = "-Buena Empresa"
+
+CorrederaBulletin01=11
+
+# acme.entities.correderabulletins.CorrederaBulletin{id=11, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 11
+# 	- version: int = 0
+# 	from acme.entities.correderabulletins.CorrederaBulletin:
+# 	+ serialVersionUID: long = 1
+# 	- nombre: java.lang.String = "Google"
+# 	- fundador: java.lang.String = "Antonio"
+
+businessman01=12
+
+# acme.entities.sanjosebulletin.SanjoseBulletin{id=12, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 12
+# 	- version: int = 0
+# 	from acme.entities.sanjosebulletin.SanjoseBulletin:
+# 	- serialVersionUID: long = 1
+# 	- name: java.lang.String = "Daniel"
+# 	- secondname: java.lang.String = "San José García"
+# 	- company: java.lang.String = "Nintendo"
 
