--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$YtQZoGyOoBGDcLd/RXD2W.77Xy8a74s1IwQgy6MYZwb7X6x/tmKPG"
+# 	- password: java.lang.String = "$2a$05$m1u67wmg4Pkby4PdgI6x8.BUzPolHaIkeBIDDP4dyOJuYKhHlTERa"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$iurBK7aLYLtFpEe2PAmH.ugYi/37CwqdFgpN0j3/idXEttTmevnua"
+# 	- password: java.lang.String = "$2a$05$VFlJiDWzsCn4p5gc8Xrs/OEkeLERX6jmjTtw2UruDdsMdCYnU1C9y"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -176,4 +176,18 @@ businessman01=12
 # 	- name: java.lang.String = "Daniel"
 # 	- secondname: java.lang.String = "San José García"
 # 	- company: java.lang.String = "Nintendo"
+
+RuizBulletin01=13
+
+# acme.entities.ruizbulletins.RuizBulletin{id=13, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 13
+# 	- version: int = 0
+# 	from acme.entities.ruizbulletins.RuizBulletin:
+# 	+ serialVersionUID: long = 1
+# 	- job: java.lang.String = "Programador"
+# 	- company: java.lang.String = "Google"
+# 	- moment: java.util.Date = <<Wed Oct 23 10:00:00 CEST 2019>>
 
