--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>Acme-Jobs</groupId>
-	<artifactId>Acme-Jobs</artifactId>
+	<groupId>acme-jobs</groupId>
+	<artifactId>acme-jobs</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
 
-	<name>Acme-Jobs</name>
+	<name>acme-jobs</name>
 	<description>This is the Acme Jobs for the students of Design &amp; Testing.</description>
 
 	<parent>
