--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 
 # User-defined properties.  Please, change them to adapt the starter project to your needs. 
 
-server.servlet.contextPath						= /Acme-Jobs
+server.servlet.contextPath						= /acme-jobs
 server.port										= 8080
 
 spring.datasource.url							= jdbc:mysql://bpnizps6w7gjjacadel7-mysql.services.clever-cloud.com:3306/bpnizps6w7gjjacadel7
