--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>acme-jobs</groupId>
-	<artifactId>acme-jobs</artifactId>
+	<artifactId>acme-jobs-1.0.war</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
 
