--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,7 @@
 #server.servlet.contextPath						= /acme-jobs
 #server.port										= 8080
 
-spring.datasource.url							= \
-	jdbc:mysql://bpnizps6w7gjjacadel7-mysql.services.clever-cloud.com:3306/bpnizps6w7gjjacadel7
+spring.datasource.url							= jdbc:mysql://bpnizps6w7gjjacadel7-mysql.services.clever-cloud.com:3306/bpnizps6w7gjjacadel7
 spring.datasource.username						= uaedpjfwizmkd85o
 spring.datasource.password						= TgHBnzGQ0C3O8U0rvlVd
 
